<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
            android:id="@+id/navigation_home"
            android:icon="@drawable/home_icon"
            android:title="@string/title_home"
            android:checked="true" />
    <item
            android:id="@+id/navigation_exercises"
            android:icon="@drawable/exercise_icon"
            android:title="@string/title_exercises" />
    <item
            android:id="@+id/navigation_nutrition"
            android:icon="@drawable/diet_icon"
            android:title="@string/diet" />
    <item
            android:id="@+id/navigation_progress"
            android:icon="@drawable/journal_icon"
            android:title="@string/journal" />
    <item
            android:id="@+id/navigation_profile"
            android:icon="@drawable/icon_profile"
            android:title="@string/title_profile" />
</menu>
